# PMA_Tech_Assessment

./: .env  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: dockerfile  requirements.txt
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/services/: geocode.py  weather.py
frontend/src/: App.tsx
