[project]
name = "weather-backend"
version = "0.1.0"
description = "FastAPI backend for weather app"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",

  # DB (you can add these in Phase B when you’re ready to persist)
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",

  # nice-to-have
  "orjson>=3.10"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
